protocol_err_v2.txt
cargo :     Checking 
zero-protocol v1.0.0 (C:\User
s\Revanth\Downloads\ZERO\zero
-protocol)
At line:1 char:1
+ cargo check -p 
zero-protocol 2>&1 | 
Out-File -FilePath 
protocol_err_v ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~
    + CategoryInfo           
   : NotSpecified    : (    
Checking ze.    
..\zero-protocol):S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr    
orId : NativeComman    dError
 
warning: unused imports: 
`error` and `warn`
 --> zero-protocol\src\discov
ery.rs:6:21
  |
6 | use tracing::{info, 
warn, error};
  |                     ^^^^ 
 ^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`crate::error::ZeroError`
 --> 
zero-protocol\src\zav.rs:4:5
  |
4 | use 
crate::error::ZeroError;
  |     
^^^^^^^^^^^^^^^^^^^^^^^

error[E0609]: no field `0` 
on type `ZeroId`
  --> zero-protocol\src\api.r
s:85:65
   |
85 |             let 
target_node_id = zero_dht::No
deId(target_id_raw.0);
   |                         
                             
           ^ unknown field

warning: unused variable: 
`prologue`
   --> zero-protocol\src\api.
rs:121:17
    |
121 |             let 
prologue = zero_handshake::no
ise::HandshakePrologue::v1_0(
0);
    |                 
^^^^^^^^ help: if this is 
intentional, prefix it with 
an underscore: `_prologue`
    |
    = note: 
`#[warn(unused_variables)]` 
(part of `#[warn(unused)]`) 
on by default

For more information about 
this error, try `rustc 
--explain E0609`.
warning: `zero-protocol` 
(lib) generated 3 warnings
error: could not compile 
`zero-protocol` (lib) due to 
1 previous error; 3 warnings 
emitted
